--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function App() {
+    function MinutesToHours() {
       const [amount, setAmount] = React.useState(0);
       const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
@@ -23,7 +23,6 @@
       };
       return (
         <div>
-          <h3>Super Converter</h3>
           <div>
             <label htmlFor="minutes">Minutes</label>
             <input
@@ -48,6 +47,31 @@
           </div>
           <button onClick={reset}>Reset</button>
           <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
+        </div>
+      );
+    }
+    function KmToMiles() {
+      return <h3>Km to Miles</h3>;
+    }
+    function App() {
+      const [index, setIndex] = React.useState("x");
+      const onSelect = (event) => {
+        // console.log(event.target.value);
+        setIndex(event.target.value);
+      };
+      console.log("render w/", index);
+      return (
+        <div>
+          <h3>Super Converter</h3>
+          <select value={index} onChange={onSelect}>
+            <option value="x">Select your units</option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">Km & Miles</option>
+          </select>
+          <hr />
+          {index === "x" ? "Please select your units" : null}
+          {index === "0" ? <MinutesToHours /> : null}
+          {index === "1" ? <KmToMiles /> : null}
         </div>
       );
     }
