--- a/index.html
+++ b/index.html
@@ -7,114 +7,29 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function MinutesToHours() {
-      const [amount, setAmount] = React.useState(0);
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (event) => {
-        // console.log(event.target.value);
-        setAmount(event.target.value);
-      };
-      const reset = () => {
-        setAmount(0);
-      };
-      const onFlip = () => {
-        reset();
-        setInverted((current) => !current);
-      };
+    function Btn({ text }) {
+      // function Btn(props) {
       return (
-        <div>
-          <h3>Minutes To Hours</h3>
-          <div>
-            <label htmlFor="minutes">Minutes</label>
-            <input
-              value={inverted ? amount * 60 : amount}
-              id="minutes"
-              placeholder="Minutes"
-              type="number"
-              onChange={onChange}
-              disabled={inverted === true}
-            />
-          </div>
-          <div>
-            <label htmlFor="hours">Hours</label>
-            <input
-              value={inverted ? amount : Math.round(amount / 60)}
-              id="hours"
-              placeholder="hours"
-              type="number"
-              onChange={onChange}
-              disabled={inverted === false}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
-        </div>
+        <button
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px, 20px",
+            border: 0,
+            borderRadius: 10,
+          }}
+        >
+          {/*{props.text}*/}
+          {text}
+        </button>
       );
     }
-    function KmToMiles() {
-      const [unit, setUnit] = React.useState(0);
-      const [reversed, setReversed] = React.useState(false);
-      const onChange = (event) => {
-        setUnit(event.target.value);
-      };
-      const reset = () => {
-        setUnit(0);
-      };
-      const onFlip = () => {
-        reset();
-        setReversed((current) => !current);
-      };
-      return (
-        <div>
-          <h3>Km to Miles</h3>
-          <div>
-            <label htmlFor="km">Km</label>
-            <input
-              id="km"
-              placeholder="Km"
-              type="number"
-              onChange={onChange}
-              value={reversed ? unit * 1.60934 : unit}
-              disabled={reversed === true}
-            />
-          </div>
-          <div>
-            <label htmlFor="miles">Miles</label>
-            <input
-              id="miles"
-              placeholder="Miles"
-              type="number"
-              onChange={onChange}
-              value={reversed ? unit : unit * 0.621374}
-              disabled={reversed === false}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>
-            {reversed ? "Turn back" : "reversed"}
-          </button>
-        </div>
-      );
-    }
+
     function App() {
-      const [index, setIndex] = React.useState("x");
-      const onSelect = (event) => {
-        // console.log(event.target.value);
-        setIndex(event.target.value);
-      };
-      //   console.log("render w/", index);
       return (
         <div>
-          <h3>Super Converter</h3>
-          <select value={index} onChange={onSelect}>
-            <option value="x">Select your units</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">Km & Miles</option>
-          </select>
-          <hr />
-          {index === "x" ? "Please select your units" : null}
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KmToMiles /> : null}
+          <Btn text="Save Changes" />
+          <Btn text="Continue" />
         </div>
       );
     }
