--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
   </body>
   <script src="https://www.unpkg.com/react@17.0.2/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({ text, changeValue }) {
+    function Btn({ text, fontSize }) {
       return (
         <button
-          onClick={changeValue}
           style={{
             backgroundColor: "tomato",
             color: "white",
             padding: "10px, 20px",
             border: 0,
             borderRadius: 10,
+            fontSize: fontSize,
           }}
         >
           {text}
         </button>
       );
     }
-
+    Btn.propTypes = {
+      text: PropTypes.string,
+      fontSize: PropTypes.number,
+    };
     function App() {
-      const [value, setValue] = React.useState("Save Changes");
-      const ChangeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <Btn text={value} changeValue={ChangeValue} />
-          <Btn text="Continue" />
+          <Btn text="Save Changes" fontSize={18} />
+          <Btn text={14} fontSize="continue" />
         </div>
       );
     }
