--- a/index.html
+++ b/index.html
@@ -5,38 +5,33 @@
   </body>
   <script src="https://www.unpkg.com/react@17.0.2/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
+  <!-- <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script> -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({ text, fontSize }) {
-      return (
-        <button
-          style={{
-            backgroundColor: "tomato",
-            color: "white",
-            padding: "10px, 20px",
-            border: 0,
-            borderRadius: 10,
-            fontSize: fontSize,
-          }}
-        >
-          {text}
-        </button>
-      );
-    }
-    Btn.propTypes = {
-      text: PropTypes.string.isRequired,
-      fontSize: PropTypes.number,
-    };
-    function App() {
-      return (
-        <div>
-          <Btn text="Save Changes" fontSize={18} />
-          <Btn text="continue" />
-        </div>
-      );
-    }
     const root = document.getElementById("root");
-    ReactDOM.render(<App />, root);
+    function Title() {
+      return (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+          Hello I am a title
+        </h3>
+      );
+    }
+    const Button = () => (
+      <button
+        style={{
+          backgroundColor: "tomato",
+        }}
+        onClick={() => console.log("Clicked!")}
+      >
+        Click me
+      </button>
+    );
+    const Container = () => (
+      <div>
+        <Title />
+        <Button />
+      </div>
+    );
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
