--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   </body>
   <script src="https://www.unpkg.com/react@17.0.2/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-  <!-- <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script> -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-
     function App() {
-      let [counter, setCounter] = React.useState(0);
-      function onClick() {
-        setCounter(counter + 1);
-        console.log(counter, setCounter);
-      }
+      const [counter, setCounter] = React.useState(0);
+      const countUp = () => {
+        // setCounter에 함수 넣기
+        // setCounter( (현재value) 리턴=> 새로운 state );
+        setCounter((current) => current + 1);
+      };
       return (
         <div>
-          <h3>Total clicks: {counter}</h3>
-          <button onClick={onClick}>Click me</button>
+          <h3>Total Clicks: {counter}</h3>
+          <button onClick={countUp}>Click me!</button>
         </div>
       );
     }
