--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function App() {
+    function MinuteToHour() {
       const [amount, setAmount] = React.useState(0);
       const [inverted, setInverted] = React.useState(false);
       function onChange(event) {
@@ -22,7 +22,6 @@
       }
       return (
         <div>
-          <h1>Super Converter</h1>
           <div>
             <label htmlFor="amount">Minutes</label>
             <input
@@ -55,6 +54,29 @@
       );
     }
 
+    function KmToMiles() {
+      return <div>Km랑 Miles 채울예정</div>;
+    }
+    function App() {
+      const [index, setIndex] = React.useState("a");
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
+      return (
+        <div>
+          <h1>Super Convert</h1>
+          <select value={index} onChange={onSelect}>
+            <option value="a">Select your units!</option>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">Km & Miles</option>
+          </select>
+          <hr />
+          {index === "a" ? "Please select your units" : null}
+          {index === "0" ? <MinuteToHour /> : null}
+          {index === "1" ? <KmToMiles /> : null}
+        </div>
+      );
+    }
     const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
   </script>
