--- a/index.html
+++ b/index.html
@@ -7,112 +7,23 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function MinuteToHour() {
-      const [amount, setAmount] = React.useState(0);
-      const [inverted, setInverted] = React.useState(false);
-      function onChange(event) {
-        setAmount(event.target.value);
-      }
-      function reset() {
-        setAmount(0);
-      }
-      function onFlip() {
-        reset();
-        setInverted((current) => !current);
-      }
+    function Btn({ text }) {
       return (
-        <div>
-          <div>
-            <label htmlFor="amount">Minutes</label>
-            <input
-              value={inverted ? amount * 60 : amount}
-              id="amount"
-              placeholer="Minutes"
-              type="number"
-              onChange={onChange}
-              // disabled={inverted ? true : false}
-              // disabled = {inverted === true}
-              disabled={inverted}
-            />
-          </div>
-          <div>
-            <label htmlFor="hours">Hours</label>
-            <input
-              value={inverted ? amount : Math.round(amount / 60)}
-              id="hours"
-              placeholer="Hours"
-              type="number"
-              // disabled={inverted ? false : true}
-              // disabled = {inverted === false}
-              disabled={!inverted}
-              onChange={onChange}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
-        </div>
+        <button
+          style={{
+            backgroundColor: "tomato",
+          }}
+        >
+          {text}
+        </button>
       );
     }
 
-    function KmToMiles() {
-      const [amount, setAmout] = React.useState(0);
-      const [inverted, setInverted] = React.useState(false);
-      function onChange(event) {
-        setAmout(event.target.value);
-      }
-      function reset() {
-        setAmout(0);
-      }
-      function invert() {
-        reset();
-        setInverted((current) => !current);
-      }
-      return (
-        <div>
-          <div>
-            <label htmlFor="km">Km</label>
-            <input
-              value={inverted ? amount * 1.60934 : amount}
-              id="km"
-              type="number"
-              placeholer="Km"
-              onChange={onChange}
-              disabled={inverted}
-            />
-          </div>
-          <div>
-            <label htmlFor="miles">Miles</label>
-            <input
-              value={inverted ? amount : amount * 0.621371}
-              id="miles"
-              type="number"
-              placeholer="Miles"
-              onChange={onChange}
-              disabled={!inverted}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={invert}>{inverted ? "Turn back" : "Invert"}</button>
-        </div>
-      );
-    }
     function App() {
-      const [index, setIndex] = React.useState("1");
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      };
       return (
         <div>
-          <h1>Super Convert</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="a">Select your units!</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">Km & Miles</option>
-          </select>
-          <hr />
-          {index === "a" ? "Please select your units" : null}
-          {index === "0" ? <MinuteToHour /> : null}
-          {index === "1" ? <KmToMiles /> : null}
+          <Btn text="Save Btn" />
+          <Btn text="Confirm" />
         </div>
       );
     }
